add dirwatcher and importer

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,5 @@
 {
-	"name": "Node.js Homework Application"
+	"name": "Node.js Homework Application",
+	"watchPath": "./data",
+	"watchDelay": 3000
 }
