--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
   "name": "nodejs-school",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJS-school homework",
   "main": "index.js",
   "scripts": {
-	"start": "nodemon --exec babel-node --presets env,stage-2 app.js",
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node --presets env,stage-2 app.js",
+    "debug": "nodemon --exec babel-node --presets env,stage-2 app.js --inspect",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-	"type": "git",
-	"url": "git+https://github.com/EugeneAlexeenko/nodejs-school.git"
+    "type": "git",
+    "url": "git+https://github.com/EugeneAlexeenko/nodejs-school.git"
   },
   "author": "Eugene Alexeenko",
   "license": "ISC",
   "bugs": {
-	"url": "https://github.com/EugeneAlexeenko/nodejs-school/issues"
+    "url": "https://github.com/EugeneAlexeenko/nodejs-school/issues"
   },
   "homepage": "https://github.com/EugeneAlexeenko/nodejs-school#readme",
   "devDependencies": {
-	"babel-cli": "6.26.0",
-	"babel-core": "^6.26.3",
-	"babel-preset-env": "^1.7.0",
-	"babel-preset-stage-2": "^6.24.1",
-	"babel-register": "^6.26.0",
-	"nodemon": "^1.18.7"
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "csvjson": "^5.1.0"
   }
 }
