--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
+    "commander": "^2.19.0",
     "csvjson": "^5.1.0"
   }
 }
